# ba64

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  cross-conformance.yml  nightly-fuzz.yml
bench/: bench.py
carriers/: README.md
carriers/temporal/: ba64_codec.py  test_codec.py
conformance/: CAVEATS.md  run.py  run_all.sh  run_reference.py
csharp/: Ba64.cs  Program.cs  README.md  ba64.csproj
csharp/pack/: Ba64.csproj
fuzz-corpus/: README.md
generator/: gen_vectors.py  reference.py
go/: README.md  ba64.go  ba64_harness  ba64_test.go  go.mod
go/harness/: main.go
java/: Ba64.java  Ba64Test.java  Harness.java  README.md  pom.xml
js/: README.md  ba64.test.ts  ba64.ts  conformance.ts  harness.ts  package.json
oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
python/: .coveragerc  MUTANTS.md  README.md  ba64.py  cli.py  harness.py  pyproject.toml  pytest.ini
python/fuzz/: README.md  fuzz_decode.py  fuzz_roundtrip.py  seed_corpus.py
python/tests/: _frames.py  conftest.py  test_chaos.py  test_cli.py  test_conformance.py  test_differential.py  test_property.py  test_unit.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: conformance.rs  property.rs
vectors/: SHA256SUMS  bombs.json  decode_errors.json  decode_frames.json  decode_plain.json  differential.json  encode_props.json
